--- a/css/style.css
+++ b/css/style.css
@@ -33,12 +33,16 @@ body {
 .section-title {
     position: relative;
     margin-bottom: 60px;
-
     padding-left: 25px;
 
     color: #292f36;
     font-size: 36px;
     text-transform: uppercase;
+}
+
+.work-title,
+.features-title {
+    color: #fff;
 }
 
 .section-title::before {
@@ -222,6 +226,7 @@ body {
     margin-bottom: 100px;
     float: left;
     width: 263px;
+    background-color: #e1e6ea;
 }
 
 .team-member:first-child {
@@ -229,7 +234,6 @@ body {
 }
 .member-info {
     padding-left: 20px;
-    background-color: #e1e6ea;
 }
 
 .member-name {
@@ -255,6 +259,30 @@ body {
     padding-top: 80px;
     color: #fff;
     background-color: #3a454d;
+    padding-bottom: 60px;
+}
+
+.portfolio-img {
+    float: left;
+    margin-left: 30px;
+    margin-bottom: 30px;
+}
+
+.portfolio-img:nth-child(3n+1) {
+    margin-left: 0;
+}
+
+.portfolio-img:first-child {
+    margin-left: 0;
+}
+
+.work-more {
+    width: 151px;
+    margin: 0 auto;
+}
+
+.more-btn {
+    padding: 8px 5px;
 }
 
 footer {
