--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,7 @@ body {
 
     font-size: 16px;
     color: #ccd0d7;
+    line-height: 26px;
 }
 
 .welcome-btns {
@@ -131,11 +132,11 @@ body {
 .about-missions {
     width: 655px;
     float: left;
+    line-height: 26px;
 }
 
 .mission {
     margin-bottom: 26px;
-
     color: #8d8f92;
 }
 
@@ -212,6 +213,7 @@ body {
     margin-bottom: 25px;
     color: #8d8f92;
     font-size: 16px;
+    line-height: 26px;
 }
 
 .team,
@@ -283,21 +285,64 @@ body {
 
 .services-item {
     margin-left: 30px;
-    margin-bottom: 95px;
+    margin-top: 30px;
     float: left;
     width: 262px;
     font-size: 16px;
+}
+
+.services-item:nth-child(n+5) {
+    margin-top: 90px;
+    margin-bottom: 165px;
 }
 
 .services-item:nth-child(4n+1) {
     margin-left: 0;
 }
 
-.services-items {
-    margin-bottom: 165px;
+.services-img {
+    margin: 0 auto 35px;
+    width: 48px;
 }
 
+.services-item-title {
+    margin-bottom: 30px;
+    color: #292f36;
+    text-transform: uppercase;
+    text-align: center;
+}
 
+.services-item-text {
+    color: #8d8f92;
+    text-align: center;
+    line-height: 26px;
+}
+
+.post-item {
+    width: 360px;
+    float: left;
+    margin-left: 30px;
+    margin-bottom: 120px;
+}
+
+.post-item:first-child {
+    margin-left: 0;
+}
+
+.post-item-img {
+    margin-bottom: 55px;
+}
+.post-item-title {
+    text-transform: uppercase;
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.post-item-text {
+    color: #dcdfe1;
+    text-align: center;
+    line-height: 26px;
+}
 footer {
     color: #fff;
     background-color: #3a454d;
