--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,7 @@ body {
     border: 2px solid white;
 
     color: #fff;
+    font-family: 'Quattrocento Sans', sans-serif;
     text-transform: uppercase;
     text-decoration: none;
 }
@@ -111,26 +112,38 @@ body {
 }
 .logo {
     float: left;
-    padding: 32px 0;
+    padding: 30px 0;
 }
 
 .menu {
-    float: left;
-    margin-left: 300px;
+    margin-left: 508px;
 }
 
 .menu-item {
     display: inline-block;
-    margin: 26px 10px 25px;
+    margin: 26px 0 25px 15px;
+}
+
+.menu-item:first-child {
+    margin-left: 0;
+}
+.menu-item:nth-child(2) {
+    margin-left:28px;
+}
+
+.menu-item:last-child {
+    margin-left:7px;
 }
 
 .menu-link {
     display: inline-block;
-    padding: 8px 10px;
+    padding: 7px 10px;
 
+    font-weight: 600;
     text-transform: uppercase;
     text-decoration: none;
     color: #a4aead;
+    font-size: 14px;
 }
 
 .menu-item:hover {
@@ -155,6 +168,7 @@ body {
 
     text-transform: uppercase;
     font-size: 36px;
+    font-family: 'Quattrocento Sans', sans-serif;
     color: #fff;
 }
 
@@ -262,6 +276,7 @@ body {
     margin-bottom: 15px;
     text-transform: uppercase;
     font-size: 18px;
+    font-family: 'Quattrocento Sans', sans-serif;
 }
 
 .goal-text {
@@ -302,6 +317,7 @@ body {
     font-size: 16px;
     color: #292f36;
     text-transform: uppercase;
+    font-family: 'Quattrocento Sans', sans-serif;
 }
 
 .member-position {
@@ -369,6 +385,7 @@ body {
     color: #292f36;
     text-transform: uppercase;
     text-align: center;
+    font-family: 'Quattrocento Sans', sans-serif;
 }
 
 .services-item-text {
@@ -395,6 +412,7 @@ body {
     text-transform: uppercase;
     text-align: center;
     margin-bottom: 30px;
+    font-family: 'Quattrocento Sans', sans-serif;
 }
 
 .post-item-text {
@@ -415,6 +433,7 @@ body {
     color: #292f36;
     font-size: 20px;
     text-transform: uppercase;
+    font-family: 'Quattrocento Sans', sans-serif;
 }
 
 .contact-info-text {
