--- a/css/style.css
+++ b/css/style.css
@@ -306,18 +306,55 @@ em {
 
 .actions {
     display: none;
-    font-size: 18px;
+    position: absolute;
+    top: 125px;
+    left: 56px;
+    font-size: 0px;
 }
+
+.action-social-btn {
+    display: inline-block;
+    margin-left: 1px;
+    text-align: center;
+    width: 50px;
+    height: 16px;
+    padding: 17px 0;
+    text-decoration: none;
+    font-size: 18px;
+    background-color: #3a454d;
+}
+
 .team-members {
     padding-top: 5px;
 }
 
 .team-member {
+    position: relative;
     margin-left: 30px;
     margin-bottom: 100px;
     float: left;
     width: 263px;
     background-color: #e1e6ea;
+}
+
+.team-member:hover {
+    background-color: #fff;
+}
+
+.team-member:hover .member-name,
+.team-member:hover .member-position {
+    color: #fff;
+}
+
+.team-member:hover .member-info {
+    background-color: #3a454d;
+}
+.team-member:hover .team-member-img {
+    opacity: 0.6;
+}
+
+.team-member:hover .actions {
+    display: block;
 }
 
 .team-member:first-child {
@@ -357,6 +394,7 @@ em {
     padding-top: 3px;
 }
 .portfolio-img {
+    position: relative;
     float: left;
     margin-left: 30px;
     margin-bottom: 28px;
@@ -364,6 +402,37 @@ em {
 
 .portfolio-img:nth-child(3n+1) {
     margin-left: 0;
+}
+
+.work-action {
+    position: absolute;
+    display: none;
+    width: 324px;
+    left:0;
+    bottom: 0;
+    padding: 22px 18px;
+    text-transform: uppercase;
+    font-family: 'Quattrocento Sans', sans-serif;
+    background-color: #292f36;
+    font-size: 18px;
+}
+
+.action-img {
+    position: absolute;
+    display: none;
+    top: 93px;
+    left: 175px;
+}
+.portfolio-img:hover .action-img {
+    display: block;
+}
+
+.portfolio-img:hover .work-action{
+    display: block;
+}
+
+.portfolio-img:hover .portfolio-item {
+    opacity: 0.5;
 }
 
 .work-more {
