--- a/css/style.css
+++ b/css/style.css
@@ -162,6 +162,10 @@ body {
     box-shadow: 0 0 0 2px #23b7a4;
 }
 
+.menu-item-active:hover {
+    box-shadow: 0 0 0 2px #23b7a4;
+}
+
 .menu-item-active .menu-link {
     color: #23b7a4;
 }
